# lbm-rs

./: Cargo.toml  readme.md
src/: boundary.rs  geometry.rs  grid.rs  lib.rs  main.rs  solver.rs  traits.rs
src/distribution/: d2q9.rs
src/physics/: ns.rs
